task1/src/log/build_2025-01-09_12-37-35/ttbot_square/stderr.log
  File "/home/hans/ros2/task1/src/install/ttbot_square/lib/python3.10/site-packages/ttbot_square/circ_cont.py", line 37
    def change_radius_callback(self,request,response)
                                                     ^
SyntaxError: expected ':'

